--- a/Covid-19 Vaccine side effects revised.Rmd
+++ b/Covid-19 Vaccine side effects revised.Rmd
@@ -94,6 +94,7 @@ tt_corpus
 
 
 library(stopwords)
+#delete stop words to allow more precise analysis for the texts on tweets.
 # preprocessing function----
 clean_corpus <- function(corpus){
   corpus <- tm_map(corpus, removePunctuation)
